added equations to post 1

--- a/_source/2015-06-16-Text_Mining_MOOC_-_Week_1.html
+++ b/_source/2015-06-16-Text_Mining_MOOC_-_Week_1.html
@@ -68,16 +68,22 @@ img {
 </div>
 
 
-<p>I am taking the <a href="https://www.coursera.org/course/textanalytics">Text Mining and Analytics MOOC</a>. The first week, we learned about mining paradigmatic and syntagmatic relations. * Paradigmatic relations are between words which are of the same class (i.e. cat, dog). These can be found by finding those words which have the most similar contexts (words on the right, words on the left). * Syntagmatic relations are between words whose meaning can be related to one another (i.e. cat, eats). These relations are mined by searching for co-occuring elements.</p>
-<p>The most technical part of this discussion arises when trying to measure the similarity of two documents using simply Term Frequency to represent the components of a document vector <span class="math">\(d = (x_1,x_2,\dots,x_n)\)</span>, where <em>n</em> reprsents the size of the vocabulary, and <span class="math">\(x_i\)</span> are the normalized counts of term <em>i</em> in that document. The main issue if we define the similarity between two documents as simply the scalar product between two document vectors is that there is a bias towards matching more words that occur more frequently, instead of matching more distinct terms (think how much students use the word <em>force</em> in their rationales, often in very different ways). Hence two concepts are introduced: * Sublinear Term Frequency transformations * Inverse Document Frequency</p>
-<p>Next, the idea of conditional entropy is introduced as a means of mining for syntagmatic relations (or co-occuring terms). Entropy measures the randomess of a random variable <span class="math">\[H(X_w) = \sum_{v\in(0,1)} -p(X_w=v)\cdot\log_2[p(X_w=v)]\]</span></p>
-<p>An entropy maximum of 1 means that the random variable X is hard to predict, while an entropy of 0 means that the random variable is certain (and hence very easy to predict). The random variable <span class="math">\(X_w\)</span> defined as <span class="math">\[       X_w = \left\{
-         \begin{array}{lr}
-             1 &amp; \text{ if} \{w} \text{ is in document}\\
-             0 &amp; \text{ if} \{w} \text{ is not in document}
-         \end{array}\]</span></p>
-<p>Conditional entropy has the same form, except the probabilities are conditioned on knowledge of one of the two words</p>
-<p>If a pairs of words have low conditional entropy, the knowledge of one increases our ability to predict the other, and hence the words may have a semantic relation.</p>
+<p>I am taking the <a href="https://www.coursera.org/course/textanalytics">Text Mining and Analytics MOOC</a>. The first week, we learned about mining paradigmatic and syntagmatic relations.</p>
+<ul>
+<li><p>Paradigmatic relations are between words which are of the same class (i.e. cat, dog). These can be found by finding those words which have the most similar contexts (words on the right, words on the left).</p></li>
+<li><p>Syntagmatic relations are between words whose meaning can be related to one another (i.e. cat, eats). These relations are mined by searching for co-occuring elements.</p></li>
+</ul>
+<p>The most technical part of this discussion arises when trying to measure the similarity of two documents using simply Term Frequency to represent the components of a document vector <span class="math">\[d = (x_1,x_2,\dots,x_n)\]</span>, where <em>n</em> reprsents the size of the vocabulary, and <span class="math">\[x_i\]</span> are the normalized counts of term <em>i</em> in that document. The main issue if we define the similarity between two documents as simply the scalar product between two document vectors is that there is a bias towards matching more words that occur more frequently, instead of matching more distinct terms (think how much students use the word <em>force</em> in their rationales, often in very different ways). Hence two concepts are introduced:</p>
+<ul>
+<li>Sublinear Term Frequency transformations<br /></li>
+<li>TF = 0/1 (only record presence of word, but no change if word appears many times)</li>
+<li>\((1+x)\) where x is the raw word count</li>
+<li><p>BM25, where in \(TF = \). \(k\) is a parameter, such that the upper bound of even the most frequent words max’s out at \(k+1\)</p></li>
+<li><p>Inverse Document Frequency</p></li>
+</ul>
+<p>Next, the idea of conditional entropy is introduced as a means of mining for syntagmatic relations (or co-occuring terms). Entropy measures the randomess of a random variable \[H(X_w) = _{v(0,1)} -p(X_w=v)_2[p(X_w=v)]\]</p>
+<p>An entropy maximum of 1 means that the random variable X is hard to predict, while an entropy of 0 means that the random variable is certain (and hence very easy to predict). The random variable <span class="math">\[X_w\]</span> defined as 1 if the word <span class="math">\[w\]</span> is in the document, and 0 if it is not.</p>
+<p>Conditional entropy has the same form, except the probabilities are conditioned on knowledge of one of the two words. If a pairs of words have low conditional entropy, the knowledge of one increases our ability to predict the other, and hence the words may have a semantic relation.</p>
 <p>The issue brought up is that conditional entropies cannot be compared unless we are looking at the same root word. This is where the idea of Mutual Information is introduced, which is measures the reduction of entropy of the root word with knowledge of some second term. Mutual Information is symmetric, and can be compared across different term pairs to determine stronger semantic/syntagmatic relations.</p>
 
 
