topic modeling post initial commit

--- a/_source/2015-06-23-Topic_Modeling.html
+++ b/_source/2015-06-23-Topic_Modeling.html
@@ -68,7 +68,8 @@ img {
 </div>
 
 
-<p>Coming Soon!</p>
+<p>In Week 2 of the Text Mining MOOC on Coursera, we examine topic modeling, which aims to take a take a collection of documents, and determine what are the different topics these documents are about. The ideas are presented incrementally, starting with mining a corpus of 1 document, extracting only 1 topic, and finally ending with a description of of the PLSA and LDA algorithms.</p>
+<p>Topic models all have the same assumption at their core: a document covers different topics in different amounts (<em>topic coverage</em> <span class="math">\[\pi\_{d,j}\]</span> is the proportion of topic j covered in document d), and each topic <span class="math">\[\theta\_j\]</span> is a word distribution, wherein each word <span class="math">\[w\_i\]</span>in the vocabulary has a probability <span class="math">\[p(w|\theta\_j)\]</span> of being generated, given that <span class="math">\[\theta\_j\]</span> is the topic discussed in that document. It is important to note that <span class="math">\[\sum\_{j=1}^k \pi\_j \]</span></p>
 
 
 </div>
